src/GSvar/MethylationWidget.*: added viewer for methylation
src/cppNGSD/FileLocationProvider*: added new file types for methylation table and plots

--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -323,10 +323,10 @@
                 <bool>false</bool>
                </property>
                <attribute name="horizontalHeaderVisible">
-                <bool>true</bool>
+                <bool>false</bool>
                </attribute>
                <attribute name="verticalHeaderVisible">
-                <bool>true</bool>
+                <bool>false</bool>
                </attribute>
                <attribute name="verticalHeaderCascadingSectionResizes">
                 <bool>false</bool>
@@ -366,7 +366,7 @@
      <x>0</x>
      <y>0</y>
      <width>1100</width>
-     <height>26</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -619,6 +619,7 @@
    <addaction name="actionPRS"/>
    <addaction name="actionPathogenicWT"/>
    <addaction name="actionCircos"/>
+   <addaction name="actionMethylation"/>
    <addaction name="separator"/>
    <addaction name="actionVirusDetection"/>
   </widget>
@@ -1513,6 +1514,11 @@
   <action name="actionReportPolymorphisms">
    <property name="text">
     <string>Report polymorphisms</string>
+   </property>
+  </action>
+  <action name="actionMethylation">
+   <property name="text">
+    <string>Open methylation calls</string>
    </property>
   </action>
  </widget>
