--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -571,6 +571,7 @@
     <addaction name="actionVariantValidation"/>
     <addaction name="actionGaps"/>
     <addaction name="separator"/>
+    <addaction name="actionSampleCounts"/>
     <addaction name="actionStatistics"/>
    </widget>
    <addaction name="menuFile"/>
@@ -1519,6 +1520,11 @@
   <action name="actionOpenGSvarDataFolder">
    <property name="text">
     <string>Open GSvar data folder</string>
+   </property>
+  </action>
+  <action name="actionSampleCounts">
+   <property name="text">
+    <string>Sample counts</string>
    </property>
   </action>
  </widget>
