add Filtering and report config editing to FusionWidget

--- a/src/GSvar/CnvWidget.ui
+++ b/src/GSvar/CnvWidget.ui
@@ -351,7 +351,7 @@
           <bool>false</bool>
          </property>
          <attribute name="verticalHeaderVisible">
-          <bool>true</bool>
+          <bool>false</bool>
          </attribute>
          <column>
           <property name="text">
