--- a/src/GSvar/MaintenanceDialog.ui
+++ b/src/GSvar/MaintenanceDialog.ui
@@ -142,6 +142,11 @@
        <string>Import order and sampling date</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>Import sample relations</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="0" column="2">
