src/GSvar/MainWindow.*: allow filtering of methylation table by type

--- a/src/GSvar/MethylationWidget.ui
+++ b/src/GSvar/MethylationWidget.ui
@@ -15,7 +15,42 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTableWidget" name="tw_methylation"/>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_include_REs">
+         <property name="text">
+          <string>include Repeat Expansions</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="cb_include_promotors">
+         <property name="text">
+          <string>include promotor regions</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QTableWidget" name="tw_methylation"/>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
