GSvar: added an icon for Mac version in icns format

--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -131,5 +131,6 @@
         <file>Icons/Export.png</file>
         <file>Icons/HerediVar.png</file>
         <file>Icons/ProteinAtlas.png</file>
+        <file>Icons/Icon.icns</file>
     </qresource>
 </RCC>
