--- a/src/GSvar/NsxSettingsDialog.ui
+++ b/src/GSvar/NsxSettingsDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>NovaSeqX demultiplexing/analysis settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="spacing">
