--- a/src/cppXML-TEST/cppXML-TEST.qrc
+++ b/src/cppXML-TEST/cppXML-TEST.qrc
@@ -12,5 +12,7 @@
         <file>data/germline_report1.xml</file>
         <file>data/tumor_only_report_broken_xml.xml</file>
         <file>data/tumor_only_report_broken_schema.xml</file>
+        <file>data/germline_sheet1.html</file>
+        <file>data/germline_sheet1_broken.html</file>
     </qresource>
 </RCC>
